Revert "Fixed spotify embed clipping on mobile"
This reverts commit 20e9ca9df26656fb03016b68b126261a00f30961.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,7 @@
+// body {
+//     background: #fffefc;
+// }
+
 $font: "sans-serif", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 //Colors
@@ -394,8 +398,6 @@ header {
     margin-left: 8%;
     padding-bottom: 30%;
     overflow: hidden; /* Hide the overflow of the container */
-    max-width: 100%; /* Ensure it fits within its container */
-
     iframe {
       position: absolute;
       top: 0;
@@ -404,45 +406,117 @@ header {
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
       border-radius: 20px;
     }
-    @media screen and (max-width: 1000px) {
-      width: 100%;
-      margin-top: 15%;
-      padding-bottom: 56.25%; /* 16:9 aspect ratio (9 / 16 * 100%) */
-    }
-    @media screen and (max-width: 620px) {
-      width: 100%;
-      margin-left: 25%;
-      margin-top: 25%;
-      padding-bottom: 75%; /* Increase padding-bottom to ensure full visibility on mobile */
-    }
   }
   .spotify-content {
     position: absolute;
     margin-left: 58%;
     margin-top: -20%;
     width: 40%;
-    background-color: $off-white;
-    border-radius: 20px;
-    z-index: 1;
     p {
       font-size: 2.3vmin;
-      margin-top: 2%;
       line-height: 2rem;
       font-weight: 300;
       color: $darkgrey;
-      @media screen and (max-width: 620px) {
-        margin-left: 10%;
-      }
-    }
-    @media screen and (max-width: 620px) {
-      position: relative;
-      margin-left: 8%;
-      margin-top: 2%;
-      width: 84%; 
-      padding: 20px;
     }
   }
 }
+
+// //About blurb
+// .about-blurb {
+//   // padding: 48px 0;
+//   height: 85vh;
+//   background: $off-white;
+//   position: relative;
+//   @media screen and (max-width: 910px) {
+//     position: relative;
+//     height: 85vh;
+//     background: $off-white;
+//   }
+//   .inner-blurb {
+//     height: 100%;
+//     display: flex;
+//     align-items: center;
+//     .content {
+//       // width: 50%;
+//       h3 {
+//         position: absolute;
+//         top: 32%;
+//         left: 12%;
+//         color: $black;
+//         font-weight: 700;
+//         font-size: 6vmin;
+//         letter-spacing: 1.5px;
+//         margin: 0;
+//       }
+//       p {
+//         position: absolute;
+//         top: 35%;
+//         right: 45%;
+//         left: 12%;
+//         font-size: 2.3vmin;
+//         margin-top: 4%;
+//         line-height: 2rem;
+//         font-weight: 300;
+//         color: $darkgrey;
+//         @media screen and (max-width: 910px) {
+//           top: 37%;
+//           right: 10%;
+//         }
+//       }
+//       .btn-row {
+//         position: absolute;
+//         top: 65%;
+//         left: 12%;
+//         a {
+//           font-weight: 500;
+//           font-size: 2.4vmin;
+//           line-height: 25.5px;
+//           letter-spacing: 1px;
+//           color: $salmon;
+//         }
+//         @media screen and (max-width: 910px) {
+//           top: 60%;
+//         }
+//       }
+//     }
+//     .images {
+//       // position: absolute;
+//       // z-index: 7;
+//       .top-right {
+//         position: absolute;
+//         top: 30%;
+//         left: 65%;
+//         right: 15%;
+//         // flex-basis: 350em;
+//         // z-index: 4;
+//         // float: left;
+//         width: 50vmin;
+//         // top: 0;
+//         // right: 0;
+//         // box-shadow: 0px 0px 21px -10px #000000;
+//         border-radius: 20px;
+//         @media screen and (max-width: 910px) {
+//           top: 75%;
+//           left: 25%;
+//           margin-bottom: 30px;
+//         }
+//       }
+//       .top-right img{
+//         border-radius: 20px;
+//         // transition: all 0.5s cubic-bezier(0.43, 0.13, 0.23, 0.96) !important;
+//       }
+//       // .top-right img:hover{
+//       //   transform: scale(1.1);
+//       // }
+//       // .bottom-left {
+//       //   position: absolute;
+//       //   width: 20vw;
+//       //   left: 0;
+//       //   bottom: 0;
+//       // }
+//     }
+//   }
+// }
 
 //Footer
   .footer { 
@@ -578,7 +652,6 @@ header {
         font-size: 3vmin;
       }
     }
-  }
     // .blog-footer p:first-of-type {
     //   display: inline-block;
     //   background: $lightpink;
@@ -597,6 +670,7 @@ header {
     //     column-gap: 2rem;
     //   }
     // }
+  }
 
     // height: 100vh;
     // .row{
